--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@
 
 section.bg-top {
     width: 100%;
-    min-height: 700px;
+    min-height: 500px;
     background-image: url('../images/bg1.jpg');
     background-size: cover;
     background-position: center;
@@ -34,4 +34,93 @@ section.bg-top {
     color: white;
     margin-top: 140px;
     padding-right: 30px;
+}
+
+section.chamada {
+    background: #3fa3c5;
+    padding: 8px 0;
+    color: white;
+}
+
+.chamada h2 {
+    font-size: 34px;
+}
+
+section.sobre {
+    padding: 30px 0;
+}
+
+.custom-title {
+    position: relative;
+}
+
+.custom-title h2 {
+    color: #888;
+    font-size: 25px;
+}
+
+.custom-title div {
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 4px;
+    width: 40px;
+    background: #3fa3c5;
+}
+
+.diferenciais {
+    padding: 30px 10px;
+    color: #646464;
+}
+
+.diferenciais h2 {
+    padding: 10px 0;
+    border-bottom: 1px dotted black;
+}
+
+.convite {
+    padding: 15px 0;
+    background: #3fa3c5;
+}
+
+.convite h2 {
+    font-size: 28px;
+    color: white;
+}
+
+section.convite input[type=email] {
+    width: calc(100%-100px);
+    height: 40px;
+}
+
+.convite button {
+    width: 100 px;
+    height: 40px;
+    vertical-align: top;
+}
+
+.contato {
+    padding: 30px 0;
+    background: rgb(225, 225, 225);
+}
+
+footer {
+    background: #333;
+    color: white;
+}
+
+footer ul {
+    padding: 0;
+    margin: 0;
+    list-style-type: none;
+    list-style-position: inside;
+}
+
+footer a {
+    font-size: 13px;
+    color: white;
+}
+
+.group-btn a {
+    margin: 0 10px;
 }
